src/objects/CLM_AgreemntFieldsToCopy__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AgreementFieldAPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AgreementFieldAPI</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementFieldLabel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AgreementFieldLabel</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CLM_AgreemntFieldsToCopy</label>
</CustomObject>